--- a/Marcinkiewicz.CqrsFramework.Domain.Common/Marcinkiewicz.CqrsFramework.Domain.Common.csproj
+++ b/Marcinkiewicz.CqrsFramework.Domain.Common/Marcinkiewicz.CqrsFramework.Domain.Common.csproj
@@ -4,4 +4,12 @@
     <TargetFramework>netcoreapp2.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="6.2.2" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Marcinkiewicz.CqrsFramework.Data\Marcinkiewicz.CqrsFramework.Data.csproj" />
+  </ItemGroup>
+
 </Project>
